Using php-path in place of php-require static function.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "php": ">= 5.4.0"
     },
     "dependencies" : {
-        "php-require": "*"
+        "php-require": "*",
+        "php-path": "git://github.com/ricallinson/php-path.git#master"
     },
     "devDependencies" : {
         "php-tester": "git://github.com/ricallinson/php-tester.git#master"
