--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
         "php": ">= 5.4.0"
     },
     "dependencies" : {
-        "php-require": "git://github.com/ricallinson/php-require.git#master"
+        
     },
     "devDependencies" : {
+        "php-require": "git://github.com/ricallinson/php-require.git#master",
         "php-tester": "git://github.com/ricallinson/php-tester.git#master"
     },
     "repository": {
